{{$NEXT}}

0.028     2018-11-29 19:32:49 EST
  - Split out lower severity violations from DiscouragedModules policy into a
    new PreferredAlternatives policy. Perl::Critic does not support filtering
    individual violations by severity, only policies, so this will allow
    separately configuring and filtering these violations.
  - Fixed DiscouragedModules and DeprecatedFeatures policy violations to report
    severity as configured.
  - Fixed DeprecatedFeatures to avoid false positives on method calls with the
    same name as autoderef functions.
  - Added /\C/, chdir(''), and bare here-docs to DeprecatedFeatures policy.

0.027     2018-06-20 20:17:06 EDT
  - Add LoopOnHash policy

0.026     2018-02-16 20:50:14 EST
  - Update Prototypes policy to recognize more ways of activating the signatures feature

0.025     2018-02-11 01:31:58 EST
  - Fix DeprecatedFeatures to recognize correctly-parsed postderef in PPI 1.237+
  - Avoid warning from running PackageMatchesFilename policy on a document without a filename (willt #29)
  - Fix another false positive in DollarAB policy

0.024     2017-08-16 22:39:53 EDT
  - Make PackageMatchesFilename more robust against infinite loops

0.023     2017-08-16 22:22:40 EDT
  - Fix issue where PackageMatchesFilename policy would loop infinitely

0.022     2017-08-16 22:17:38 EDT
  - Also consider -W a violation of WarningsSwitch policy
  - Fix false positive in DollarAB policy where $a or $b is within another block
  - Add PackageMatchesFilename policy

0.021     2017-06-03 19:49:16 EDT
  - Be more lenient when trying to detect postderef for DeprecatedFeatures autoderef violations

0.020     2017-05-15 20:45:02 EDT
  - Updates to documentation for DeprecatedFeatures and DiscouragedModules policies
  - Add require ::Foo::Bar to DeprecatedFeatures policy
  - Remove qr//xx from DeprecatedFeatures policy as this is now a valid regex modifier in 5.26.

0.019     2017-01-29 22:13:34 EST
  - Add autoderef to DeprecatedFeatures policy
